# st2

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
csrc/: CMakeLists.txt  LICENSE.sphinx  NOTICE.md  config.h.in
csrc/include/s3/: acmod_set.h  best_q.h  ck_seg.h  common.h  corpus.h  cvt2triphone.h  div.h  dtree.h  gauden.h  heap.h  itree.h  kdtree.h  kmeans.h  lexicon.h  metric.h  mk_phone_list.h  mk_phone_seq.h  mk_sseq.h  mk_trans_seq.h  mk_ts2ci.h  mllr.h  mllr_class_io.h  mllr_io.h  model_def.h  model_def_io.h  model_inventory.h  phone_graph.h  pset_io.h  quest.h  remap.h  s3.h  s3acc_io.h  s3cb2mllr_io.h  s3gau_io.h  s3io.h  s3lamb_io.h  s3map_io.h  s3mixw_io.h  s3phseg_io.h  s3tmat_io.h  (+9 more)
csrc/include/sphinxbase/: agc.h  bio.h  bitarr.h  bitvec.h  byteorder.h  case.h  clapack_lite.h  cmd_ln.h  cmn.h  fe.h  feat.h  filename.h  fixpoint.h  fsg_model.h  genrand.h  glist.h  hash_table.h  heap.h  jsgf.h  listelem_alloc.h  logmath.h  matrix.h  mmio.h  ngram_model.h  pio.h  prim_type.h  priority_queue.h  profile.h  strfuncs.h  yin.h
csrc/include/st2/: st2_fe.h
csrc/include/sys_compat/: file.h  misc.h  time.h
csrc/libs/libclust/: div.c  kdtree.c  kmeans.c  metric.c
csrc/libs/libcommon/: acmod_set.c  best_q.c  ck_seg.c  cvt2triphone.c  dtree.c  heap.c  itree.c  lexicon.c  mk_phone_list.c  mk_phone_seq.c  mk_sseq.c  mk_trans_seq.c  mk_ts2ci.c  phone_graph.c  phone_graph_triphone.c  quest.c  remap.c  state_seq.c  state_seq_graph.c  state_seq_internal.h  ts2cb.c  vector.c  was_added.c
csrc/libs/libio/: corpus.c  model_def_io.c  pset_io.c  s3acc_io.c  s3cb2mllr_io.c  s3gau_full_io.c  s3gau_io.c  s3io.c  s3lamb_io.c  s3map_io.c  s3mixw_io.c  s3phseg_io.c  s3tmat_io.c  s3ts2cb_io.c  segdmp.c  swap.c  topo_read.c
csrc/libs/libmllr/: mllr.c  mllr_io.c
csrc/libs/libmodinv/: gauden.c  mod_inv.c
csrc/libs/libst2/: st2_agg_seg.c  st2_agg_seg.h  st2_align.c  st2_align.h  st2_bw.c  st2_bw.h  st2_delint.c  st2_delint.h  st2_dtree.c  st2_dtree.h  st2_fe.c  st2_flat.c  st2_flat.h  st2_inc_comp.c  st2_inc_comp.h  st2_kdtree.c  st2_kdtree.h  st2_kmeans.c  st2_kmeans.h  st2_map_adapt.c  st2_map_adapt.h  st2_mdef_gen.c  st2_mdef_gen.h  st2_param_cnt.c  st2_param_cnt.h
csrc/programs/agg_seg/: CMakeLists.txt  add_seg.h  agg_all_seg.c  agg_all_seg.h  agg_phn_seg.c  agg_phn_seg.h  agg_st_seg.c  agg_st_seg.h  cnt_phn_seg.c  cnt_phn_seg.h  cnt_st_seg.c  cnt_st_seg.h  main.c  mk_seg.c  mk_seg.h  parse_cmd_ln.c
csrc/programs/bldtree/: CMakeLists.txt  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/bw/: CMakeLists.txt  accum.c  accum.h  backward.h  baum_welch.c  baum_welch.h  forward.c  forward.h  main.c  next_utt_states.c  next_utt_states.h  train_cmd_ln.c  train_cmd_ln.h  viterbi.h
csrc/programs/cdcn_norm/: CMakeLists.txt  cepdist.c  correction.c  header.h  initialize.c  main.c  max_q.c  mmse_x.c  norm_utt.c  readdistribution.c  resfft.c  rsfft.c  two_D_ize.c
csrc/programs/cdcn_train/: CMakeLists.txt  em_full_vars.c  gauss.c  header.h  main.c  parse_cmd_ln.c  parse_cmd_ln.h  read_backup_distributions.c  store_distribution.c  vq.c
csrc/programs/cp_parm/: CMakeLists.txt  cmd_ln_defn.h  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/delint/: CMakeLists.txt  interp_fn.c  interp_fn.h  main.c  parse_cmd_ln.c
csrc/programs/g2p_eval/: CMakeLists.txt
csrc/programs/g2p_train/: CMakeLists.txt
csrc/programs/inc_comp/: CMakeLists.txt  accum_wt_param.c  accum_wt_param.h  inc_densities.c  inc_densities.h  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/init_gau/: CMakeLists.txt  accum.c  accum.h  init_gau.c  init_gau.h  main.c  parse_cmd_ln.c
csrc/programs/init_mixw/: CMakeLists.txt  parse_cmd_ln.c
csrc/programs/kdtree/: CMakeLists.txt  main.c  parse_cmd_ln.c
csrc/programs/kmeans_init/: CMakeLists.txt  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/make_quests/: CMakeLists.txt  main.c  make_tree.c  new_quest.c  parse_cmd_ln.c
csrc/programs/map_adapt/: CMakeLists.txt  cmd_ln.c  cmd_ln_defn.h  main.c  parse_cmd_ln.h
csrc/programs/mixw_interp/: CMakeLists.txt  cmd_ln_defn.h  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/mk_flat/: CMakeLists.txt  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/mk_mdef_gen/: CMakeLists.txt  hash.c  hash.h  heap.c  heap.h  main.c  mk_mdef_gen.c  mk_untied.h  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/mk_mllr_class/: CMakeLists.txt  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/mk_s2sendump/: CMakeLists.txt  mk_s2sendump.c  parse_cmd_ln.c  parse_cmd_ln.h  senone.c  senone.h
csrc/programs/mk_ts2cb/: CMakeLists.txt  main.c  parse_cmd_ln.c
csrc/programs/mllr_solve/: CMakeLists.txt  cmd_ln_defn.h  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/mllr_transform/: CMakeLists.txt  cmd_ln_defn.h  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/norm/: CMakeLists.txt  main.c  parse_cmd_ln.c
csrc/programs/param_cnt/: CMakeLists.txt  cb_cnt.c  cb_cnt.h  cnt_fn.h  enum_corpus.c  enum_corpus.h  main.c  param_cnt.c  param_cnt.h  parse_cmd_ln.c  parse_cmd_ln.h  phone_cnt.c  phone_cnt.h  ts_cnt.c  ts_cnt.h
csrc/programs/printp/: CMakeLists.txt  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/programs/prunetree/: CMakeLists.txt  main.c  parse_cmd_ln.c
csrc/programs/sphinx3_align/: CMakeLists.txt  adaptor.c  adaptor.h  approx_cont_mgau.c  approx_cont_mgau.h  ascr.c  ascr.h  cb2mllr_io.c  cb2mllr_io.h  cmdln_macro.h  cmu6_lts_rules.c  cmu6_lts_rules.h  cont_mgau.c  cont_mgau.h  corpus.c  corpus.h  ctxt_table.h  dict.c  dict.h  dict2pid.c  dict2pid.h  fast_algo_struct.c  fast_algo_struct.h  fillpen.c  fillpen.h  gs.c  gs.h  hmm.c  hmm.h  interp.c  interp.h  kbcore.c  kbcore.h  kdtree.c  kdtree.h  logs3.c  logs3.h  lts.c  lts.h  main_align.c  (+26 more)
csrc/programs/sphinx_cepview/: CMakeLists.txt  main_cepview.c
csrc/programs/sphinx_fe/: CMakeLists.txt  cmd_ln_defn.h  sphinx_fe.c  sphinx_wave2feat.h
csrc/programs/tiestate/: CMakeLists.txt  main.c  parse_cmd_ln.c  parse_cmd_ln.h
csrc/tests/: CMakeLists.txt  test_io_roundtrip.c
(+208 files in other folders)
