[project]
name = "st2"
version = "0.1.0"
description = "ST2 - Acoustic model training toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Kevin Lenzo", email = "kevinlenzo@gmail.com" }
]
keywords = ["speech", "acoustic-model", "hmm", "training", "sphinx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "cffi>=1.15.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "arpabo>=0.3.0",
]

[project.optional-dependencies]
# Forced alignment runs entirely against libst2c via CFFI; no extra
# Python dependencies are required beyond the core ones.
align = []
# PocketSphinx is needed only by the unconstrained-decoding path used
# by `st2 test` (st2.lib.testing.decoder). Forced alignment does not
# touch it.
test = [
    "pocketsphinx>=5.0.0",
    "jiwer>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]
all = [
    "st2[align,test,dev,docs]",
]

[project.scripts]
st2 = "st2.cli:main"

[project.urls]
Homepage = "https://github.com/lenzo-ka/st2"
Repository = "https://github.com/lenzo-ka/st2"

[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.packages = ["st2"]
# Install library and binaries to st2/_lib/
wheel.install-dir = "st2/_lib"
# Require cmake 3.15+ for scikit-build-core
cmake.minimum-version = "3.15"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "ON"
BUILD_CLI = "ON"

[tool.cibuildwheel]
build = [
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
]
skip = [
    "*_i686",
    "*-win32",
    "*-musllinux*",
]
# Test the built wheels
test-requires = ["pytest", "numpy"]
# Run the parity tests too: they now resolve st2's own binaries (bundled in
# the wheel's st2/_lib/bin) via get_bin_dir(), so CFFI-vs-CLI parity is
# exercised against the built wheel instead of being skipped.
test-command = "pytest {project}/tests -v"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Build universal2 separately if needed
# archs = ["universal2"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# Use manylinux for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["st2"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
