[project]
name = "st2"
version = "0.1.0"
description = "ST2 - Acoustic model training toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Kevin Lenzo", email = "kevinlenzo@gmail.com" }
]
keywords = ["speech", "acoustic-model", "hmm", "training", "sphinx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "cffi>=1.15.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "arpabo>=0.3.0",
]

[project.optional-dependencies]
# Forced alignment runs entirely against libst2c via CFFI; no extra
# Python dependencies are required beyond the core ones.
align = []
# PocketSphinx is needed only by the unconstrained-decoding path used
# by `st2 test` (st2.lib.testing.decoder). Forced alignment does not
# touch it.
test = [
    "pocketsphinx>=5.0.0",
    "jiwer>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]
all = [
    "st2[align,test,dev,docs]",
]

[project.scripts]
st2 = "st2.cli:main"

[project.urls]
Homepage = "https://github.com/lenzo-ka/st2"
Repository = "https://github.com/lenzo-ka/st2"

[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.packages = ["st2"]
# Install library and binaries to st2/_lib/
wheel.install-dir = "st2/_lib"
# Require cmake 3.15+ for scikit-build-core
cmake.minimum-version = "3.15"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "ON"
BUILD_CLI = "ON"

[tool.cibuildwheel]
build = [
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
]
skip = [
    "*_i686",
    "*-win32",
    "*-musllinux*",
]
# Test the built wheels
# Smoke-test the *installed* wheel: import it and load the bundled libst2c.
# We deliberately do NOT run `pytest {project}/tests` here — pytest inserts the
# project root onto sys.path, which imports the source `st2/` package (no
# bundled library) instead of the wheel, so every CFFI test would "not find
# libst2c". Running `python -c` from cibuildwheel's neutral working directory
# imports the installed wheel and verifies the C substrate loads. The full
# test suite (including parity) runs against a dev build in the Tests workflow.
test-command = "python -c \"import st2; from st2.lib import _st2c; _st2c.get_lib(); print('wheel OK', st2.__version__)\""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Build universal2 separately if needed
# archs = ["universal2"]

[tool.cibuildwheel.linux]
# x86_64 only in CI. aarch64 Linux wheels would build under QEMU emulation on
# the x86 runner, which recompiles the large vendored C library four times
# (cp310-cp313) emulated and takes hours. Add aarch64 back on a native ARM
# runner or a release-only job when arm64 Linux wheels are needed.
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux2014"

# Windows is unsupported for now (vendored C does not build under MSVC); the
# build-wheels matrix omits the Windows runner. See .github/workflows/build.yml.

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["st2"]

[tool.mypy]
# Target 3.12 so mypy can parse modern third-party stubs (e.g. NumPy's use of
# PEP 695 `type` aliases, which fail to parse under a <3.12 target). The
# package still supports 3.10+ at runtime.
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
